# libebpf

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dev.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  build.sh  ebpf_jit_arm.c
.github/workflows/: eun-vm-tests.yml  publish.yml  release.yml  run-execution-context-tests.yml  run-vm-tests.yml  ubuntu.yml  windows.yml
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  libebpfConfig.cmake.in  version.hpp.in
documents/: debug.md  ffi.md
documents/dlsym/: Makefile  README.md  main.c
documents/elfoffset/: README.md  maps.c  myprogram.c
documents/hook/: .gitignore  Makefile  README.md  hook.h  maps.c
documents/libffi/: README.md  test.c
documents/pass-param/: Makefile  README.md  hook.c  hook.h  main.c  patch.c
documents/qemu-user/: .gitignore  CMakeLists.txt  arm-toolchain.cmake  basic_jit_x86_64.cpp
ebpf-src/: ebpf.h  ebpf_allocator.c  ebpf_allocator.h  ebpf_env.c  ebpf_env.h  ebpf_error.h  ebpf_inst.h  ebpf_lock.h  ebpf_map.c  ebpf_map.h  ebpf_mbedtls_checks.h  ebpf_porting.h  ebpf_types.h  ebpf_vm.c  ebpf_vm.h  jit.c  jit.h  jit_thumb2.c  jit_thumb2.h  map.c  map.h
example/: bpf_host_ffi.h  bpf_progs.h  cmd.c  main.c  minimal.c  minimal.h  test_code.c  test_code.h  test_vm.c
example/bpf/: Makefile  add.bpf.c  base.btf  btf-base.c  btf-relo.bpf.c  div64.bpf.c  ffi.bpf.c  ffi.bpf.h  global.bpf.c  minimal.ebpf.c  mul.bpf.c  test1.bpf.c  test1.ebpf.c  test2.bpf.c  while.bpf.c
example/btf/: test_btf.bpf.c
example/elfoffset/: Makefile  README.md  main.c  myprogram.c
example/ffi/: ffi.bpf.c  ffi.bpf.h
example/libffi/: README.md
example/qemu-user/: .gitignore  CMakeLists.txt  README.md  arm-toolchain.cmake
examples/linux/: main.c
examples/windows/: main.c
execution-test/: CMakeLists.txt  test_ffi.cpp  test_map.cpp  test_with_ebpf.cpp
extensions/: .gitignore  CMakeLists.txt  extensions.cmake
extensions/include/: bpf_host_ffi.h  extension.h
extensions/src/: .gitignore  Makefile  bootstrap.c  bpf_host_ffi.c  extension.c  func_addr.c  func_offset.c  main.c  relo.bpf.c  relo.c
include/: libebpf.h  libebpf_execution.h  libebpf_ffi.bpf.h  libebpf_ffi.h  libebpf_insn.h  libebpf_map.h  libebpf_map_ringbuf.h  libebpf_vm.h  linux-bpf.h  linux-errno.h  type-fixes.h
include/libebpf/: libebpf.h  linux-jit-bpf.h
include/linux-header/: bpf.h  filter.h
include/uapi/linux/: filter.h  stddef.h
src/: Makefile  bpf_jit_comp.c  bpf_jit_comp32.c  clause_helpers.h  core.c  debug.h  ebpf_inst.h  ebpf_jit.c  ebpf_jit_arm32.c  ebpf_jit_arm32.h  ebpf_jit_arm64.c  ebpf_jit_defarm32.h  ebpf_jit_x86_64.c  ebpf_loader.c  ebpf_vm.c  ebpf_vm.h  libebpf.c  libebpf.ld  libebpf_execution.c  libebpf_execution_helpers.c  libebpf_execution_internal.h  libebpf_export.h  libebpf_ffi_functions.c  libebpf_internal.h  libebpf_map.c  libebpf_map_array.c  libebpf_map_hash.c  libebpf_map_implementation.c  libebpf_map_internal.h  libebpf_map_ringbuf.c  libebpf_verify.c  libebpf_vm.c  libebpf_vm_verify.c  linux-errno.h  linux_bpf.h  linux_bpf_core.c  linux_jit_bpf.h  misc.h  type-fixes.h
src/arch/arm/: bpf_jit_32.c  bpf_jit_arch.h  linux_bpf.h
src/arch/arm/net/: bpf_jit_32.c
src/arch/arm64/: bpf_jit_arch.h  bpf_jit_comp.c  insn-def.h  insn.c  insn.h
src/arch/arm64/net/: bpf_jit.h  bpf_jit_comp.c
src/arch/riscv/: bpf_jit.h  bpf_jit_arch.h  bpf_jit_comp32.c  bpf_jit_comp64.c  bpf_jit_core.c
src/arch/x86/: bpf_jit.h  bpf_jit_arch.h  bpf_jit_comp.c  bpf_jit_comp32.c
src/arch/x86/net/: bpf_jit_comp.c  bpf_jit_comp32.c
src/jit/: helper_adaptor.c
src/jit/arm64/: ubpf_jit_arm64.c
src/jit/x86_64/: ubpf_jit_x86_64.c  ubpf_jit_x86_64.h
src/utils/: ends_conversion.h  hashmap.c  hashmap.h  spinlock.h
test/: .gitignore  CMakeLists.txt  README.md  fix_bug.ebpf.c  pyvenv.cfg  requirements.txt
test/aarch64_test/: run-interpret.sh  run-jit.sh
test/include/: test_minimal_bpf_host_ffi.h
test/src/: runtime.c  test.c  test_ffi.c  test_jit.c  tmp_test.cpp
test/test-cases/: call_local.data  err-call-bad-imm.data  err-call-unreg.data  err-endian-size.data  err-incomplete-lddw2.data  err-invalid-reg-dst.data  err-jmp-lddw.data  err-jmp-out.data  err-lddw-invalid-src.data
test/test-cases/elf/: bad-rel-offset.data  bad-rel-strtab-index.data  bad-rel-symbol-index.data  bad-rel-symbol-name.data  bad-rel-symbol-table-section-index.data  bad-rel-type.data  bad-section-header-offset.data  bad-section-header-size.data  bad-section-offset.data  bad-section-size.data  ehdr-short.data  no-text-section.data  ok.data  rel-sym-not-found.data  too-many-sections.data  wrong-byte-order.data  wrong-class.data  wrong-machine.data  wrong-osabi.data  wrong-type.data  wrong-version.data
test/test_framework/: .gitignore  expand-testcase.py  test_assembler.py  test_disassembler.py  test_elf.py  test_jit.py  test_roundtrip.py  test_vm.py  testdata.py
test/test_framework/ubpf/: asm_parser.py
tools/: compile_code.py  mem  write_mem.py
tools/ubpf/: assembler.py  disassembler.py
vm-test/test-cases/: err-infinite-loop.data  err-invalid-reg-src.data  err-lddw-invalid-src.data  err-stack-oob.data
vm-test/test_framework/: test_jit.py  test_vm.py
vm-test/test_runner/: test_runner.c
